--- a/acqua/templates/protected.html
+++ b/acqua/templates/protected.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login Example{% endblock %}
+{% block title %}{% endblock %}
 
 {% block page_content %}
     <h1>Protected page</h1>
