--- a/acqua/templates/base.html
+++ b/acqua/templates/base.html
@@ -1,31 +1,22 @@
-{% block title %}Login Example{% endblock %}
+{% block title %}{% endblock %}
 
 {% block navbar %}
-    <nav class="navbar navbar-inverse" role="navigation">
-        <div class="container">
-            <a class="navbar-brand" href="{{ url_for('admin.index') }}">
-                Login Example
-            </a>
-            <ul class="nav navbar-nav">
+
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}" />
+                <h1>Acqua</h1>
                 <li><a href="{{ url_for('admin.index') }}">Home</a></li>
-                <li><a href="{{ url_for('admin.protected') }}">Protected</a></li>
-            </ul>>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    {% if current_user.is_authenticated %}
-                        <a href="{{ url_for('admin.logout') }}">Logout</a>
-                    {% else %}
-                        <a href="{{ url_for('admin.login') }}">Login</a>
-                        <a href="{{ url_for('admin.register') }}">Register</a>
-                    {% endif %}
-                </li>
-            </ul>
-        </div>
-    </nav>
+                <li><a href="{{ url_for('admin.protected') }}">Member</a></li>
+                {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('admin.logout') }}">Logout</a></li>
+                {% else %}
+                <li><a href="{{ url_for('admin.login') }}">Sign In</a></li>
+                <li><a href="{{ url_for('admin.register') }}">Register</a></li>
+                {% endif %}
+
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        {% block page_content %}{% endblock %}
-    </div>
+
+{% block page_content %}{% endblock %}
+
 {% endblock %}
