--- a/acqua/templates/register.html
+++ b/acqua/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{% endblock %}
 
 {% block page_content %}
     <h1>Register</h1>
