--- a/acqua/templates/index.html
+++ b/acqua/templates/index.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}{% endblock %}
+{% block body %}
+    <h1>Home</h1>
 
-{% block page_content %}
-    <h1>Home page</h1>
     <p>This page can be viewed by all users.</p>
     <p>You are {% if not current_user.is_authenticated %}not {% endif %}logged in.</p>
 {% endblock %}
