--- a/acqua/templates/protected.html
+++ b/acqua/templates/protected.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{% endblock %}
-
-{% block page_content %}
+{% block body %}
     <h1>Protected page</h1>
     <p>This page can only be viewed by logged in users.</p>
     <p>You are logged in as <b>{{ current_user.username }}</b>.</p>
