--- a/acqua/templates/register.html
+++ b/acqua/templates/register.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{% endblock %}
-
-{% block page_content %}
+{% block body %}
     <h1>Register</h1>
     <form method="post">
         {{ form.hidden_tag() }}
