--- a/acqua/templates/login.html
+++ b/acqua/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block body%}
+<div class="login">
     <h1>Login</h1>
     <form method="post">
         {{ form.hidden_tag() }}
@@ -8,5 +9,5 @@
         {{ form.password.label }} {{ form.password }}
         {{ form.submit }}
     </form>
-
+</div>
 {% endblock %}
