--- a/acqua/templates/acqdimension.html
+++ b/acqua/templates/acqdimension.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block body %}
+<div class="body">
     <h1>Protected page</h1>
-    <p>This page can only be viewed by logged in users.</p>
+    <p>This page can only be viewed by logged in users.{{ user }}</p>
     <p>You are logged in as <b>{{ current_user.username }}</b>.</p>
+</div>
 {% endblock %}
