--- a/acqua/templates/base.html
+++ b/acqua/templates/base.html
@@ -5,6 +5,8 @@
 <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}" />
 <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" />
 <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}" />
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}" />
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/acqdimension.css') }}" />
 
 <div class="navbar">
     <div class="nav-up">
