--- a/acqua/templates/acqdimension.html
+++ b/acqua/templates/acqdimension.html
@@ -5,5 +5,14 @@
     <h1>Protected page</h1>
     <p>This page can only be viewed by logged in users.{{ user }}</p>
     <p>You are logged in as <b>{{ current_user.username }}</b>.</p>
+
+    <form method="post">
+        {{ form.hidden_tag() }}
+        {{ form.height.label }} {{ form.height }}
+        {{ form.lenght.label }} {{ form.lenght }}
+        {{ form.width.label }} {{ form.width }}
+        {{ form.liters.label }} {{ form.liters }}
+        {{ form.submit }}
+    </form>
 </div>
 {% endblock %}
