--- a/acqua/templates/acqdimension.html
+++ b/acqua/templates/acqdimension.html
@@ -2,9 +2,7 @@
 
 {% block body %}
 <div class="body">
-    <h1>Protected page</h1>
-    <p>This page can only be viewed by logged in users.{{ user }}</p>
-    <p>You are logged in as <b>{{ current_user.username }}</b>.</p>
+    <h1>Your Acquarium Dimension</h1>
 
     <form method="post">
         {{ form.hidden_tag() }}
