--- a/acqua/templates/base.html
+++ b/acqua/templates/base.html
@@ -28,6 +28,9 @@
             <li><a href="{{ url_for('admin.acqdimension') }}">Fish Database</a></li>
             <li><a href="{{ url_for('admin.acqdimension') }}">Plant Database</a></li>
             <li><a href="{{ url_for('admin.acqdimension') }}">Water Values</a></li>
+            <li><a href="{{ url_for('admin.download') }}">download</a></li>
+            <li><a href="{{ url_for('admin.dropbox') }}">dropbox</a></li>
+            <li><a href="{{ url_for('admin.dropboxlogout') }}">dropbox logout</a></li>
         </div>
         <div class="destra">
             <li><a href="{{ url_for('admin.logout') }}">Logout</a></li>
